--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,11 +27,14 @@ jobs:
           node-version: 22
           cache: 'pnpm'
 
-      - name: Enable corepack & pnpm
-        run: |
-          corepack enable
-          corepack prepare pnpm@latest --activate
-          pnpm --version
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: latest
+          run_install: false
+
+      - name: Verify pnpm
+        run: pnpm --version
 
       - name: Verify pnpm-lock.yaml
         run: |
