--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ permissions:
   packages: write
 
 env:
-  DOCKER_IMAGE: ghcr.io/${{ github.repository }}/nextjs-basic-config
+  DOCKER_IMAGE: ghcr.io/${{ github.repository }}
   APP_VERSION: ${{ github.sha }}
 
 jobs:
@@ -86,7 +86,7 @@ jobs:
 
       - name: Login to GHCR
         run: |
-          echo "${{ secrets.GHCR_TOKEN }}" | docker login ghcr.io \
+          echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io \
             -u "${{ github.actor }}" \
             --password-stdin
 
