--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ permissions:
   packages: write
 
 env:
-  DOCKER_IMAGE: ghcr.io/${{ github.repository }}
+  DOCKER_IMAGE: ghcr.io/nextjs-basic-config
   APP_VERSION: ${{ github.sha }}
 
 jobs:
