--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -3,7 +3,7 @@ FROM node:22.19.0-alpine
 WORKDIR /app
 COPY .next/standalone ./
 COPY .next/static ./.next/static
-COPY public ./public
+# COPY public ./public
 
 EXPOSE 3000
 ENV NODE_ENV=production
